# car_homework_backend

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
car_rent_backend/: asgi.py  settings.py  urls.py  wsgi.py
rest_api/: admin.py  models.py  serializers.py  urls.py  views.py
rest_api/management/commands/: seed.py
rest_api/migrations/: 0001_initial.py  0002_user_phone_number.py  0003_auto_20210526_1239.py
